Fix spacing of "welcome" text
See "2 Handfuls of Apple Sauce", page 14.

I don't want to make too many changes like this before we start working
on some other structural changes.

--- a/app/assets/stylesheets/app/typography.scss
+++ b/app/assets/stylesheets/app/typography.scss
@@ -30,6 +30,7 @@ h1 { /* "page title" */
 .welcome { /* "welcome text" */
   font-size: 2em;
   color: #A3A3A3;
+  line-height: 1.25em;
 }
 
 h2 { /* "instrument title" */
